# VideoPlayer

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  AudioChannelWithFaac.cpp  AudioChannelWithFaac.h  BaseChannel.h  CMakeLists.txt  Callback.h  EnjoyPlayer.cpp  EnjoyPlayer.h  FaceTrack.cpp  FaceTrack.h  ImageUtils.cpp  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  VideoChannelWithX264.cpp  VideoChannelWithX264.h  native-lib.cpp
app/src/main/cpp/include/: packt.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: attributes.h  common.h  hwcontext_cuda.h  mem.h  opt.h  pixdesc.h  pixfmt.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/cpp/include/seeta/: FaceTracker.h
app/src/main/java/com/tools/: App.java
app/src/main/java/com/tools/cv/: Face.java  FaceTracker.java  FaceTracker2.java  OpenCVFaceTrackActivity.java  Utils.java
app/src/main/java/com/tools/gl/: CameraHelper.java  CameraRenderer.java  CameraView.java  OpenGLCameraPreview.java  OpenGLUtils.java  RecordButton.java  ScreenFilter.java
app/src/main/java/com/tools/gl/filter/: AbstractFboFilter.java  AbstractFilter.java  BigEyeFilter.java  CameraFilter.java  FilterChain.java  FilterContext.java  RecordFilter.java  ScreenFilter.java  SoulFilter.java  SplitFilter.java  StickFilter.java
app/src/main/java/com/tools/gl/filter/beauty/: BeautyAdjustFilter.java  BeautyFilter.java  BeautyHighpassFilter.java  (+2 more)
app/src/main/java/com/tools/gl/record/: EGLEnv.java  MediaRecorder.java
app/src/main/java/com/tools/live/: AudioChannel.java  AudioCodec.java  CameraLiveActivity.java  ImageUtils.java  LiveExecutors.java  RTMPPackage.java  RtmpClient.java  ScreenLive.java  ScreenLiveActivity.java  VideoChannel.java  VideoCodec.java
app/src/main/java/com/tools/player/: EnjoyPlayer.java  MainActivity.java
app/src/main/res/layout/: activity_camera_live.xml  activity_face_track.xml  activity_gl_camera_preview.xml  activity_main.xml  activity_screen_live.xml
app/src/main/res/raw/: beauty_blur.frag  bigeye_frag.frag  camera_frag.frag  camera_vert.vert  soul_frag.frag  split_frag.frag
gradle/wrapper/: gradle-wrapper.properties
